Fixed some spacing things.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,8 @@
-/*
+
 * {
     outline: 1px solid blue;
 }
-*/
+
 body {
     margin: 0;
     background: #ffe9b3;
@@ -25,10 +25,8 @@ header {
 }
 
 .navbar {
-    /* for lab 3
     display: flex;
     justify-content: space-between;
-     */
     width: 100%;
     margin: 0 auto;
 }
@@ -65,10 +63,8 @@ header {
 
 .header__menu-list {
     box-sizing: border-box;
-    /* for lab 3
     display: flex;
     justify-content: space-evenly;
-    */
     margin: 0;
     padding: 0;
     list-style: none;
@@ -76,11 +72,9 @@ header {
 
 .header__menu-item {
     box-sizing: border-box;
-    /* for lab 3
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: space-around;
-     */
     margin: 10px 15px;
     width: auto;
 }
@@ -107,7 +101,14 @@ main {
 }
 
 .main {
-    text-align: center;
+    text-align: justify;
+    display: grid;
+    box-sizing: border-box;
+    margin-top: 10px;
+    position: relative;
+    padding: 25px;
+    align-content: center;
+    grid-gap: 0;
 }
 
 section {
@@ -115,21 +116,51 @@ section {
     padding: 0
 }
 .main__header {
-    margin: 0;
+    font-size: 2rem;
+    margin: 10px 10px 5px;
     padding: 0;
+    object-fit: contain;
+    background-color: #b39959;
     color: black;
+    grid-column: 1 / 3;
+    grid-row: 1;
+    width: 50rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .main__paragraph {
-    border-width: 1px;
-    border-color: black;
+    box-sizing: border-box;
+    border: 3px solid #b39959;
+    margin: 5px 10px 10px;
+    padding: 0 25px;
+    object-fit: contain;
+    font-size: 1.5rem;
+    grid-column: 1 / 3;
+    grid-row: 2;
+    line-height: 120%;
+    width: 50rem;
+    height: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .main__img {
+    margin: 10px 0;
+    grid-column: 3;
+    grid-row: 1 / 3;
     width: 190px;
     height: 280px;
     border-color: beige;
     border-width: 30px;
+}
+
+.main__img_big {
+    width: 700px;
+    height: 250px;
 }
 
 .article {
@@ -137,7 +168,7 @@ section {
 }
 
 .article__header {
-    margin: 0;
+    margin: 20px 0 10px;
     padding: 10px 0;
     color: #4764B3;
     font-weight: bolder;
@@ -145,7 +176,6 @@ section {
     text-decoration: underline;
     text-decoration-style: dotted;
     text-decoration-color: #ffe9b3;
-
 }
 
 .article__main-text {
